# ECRTS24

./: .gitattributes  LICENSE  README.md
artifact/: LICENSE  README.md
artifact/cuda-tests/: README.md
artifact/cuda-tests/cuda_launch_kernel_memcpy_contention/: Makefile  README.md  cuda_launch_kernel_memcpy_contention  cuda_launch_kernel_memcpy_contention.cu  cuda_shim.cc  process.sh  pthread_shim.cc
artifact/cuda-tests/cuda_launch_kernel_time/: Makefile  README.md  cuda_launch_kernel_time.cu  process.sh
artifact/cuda-tests/cuda_memcpy_time/: Makefile  README.md  cuda_memcpy_time.cu
artifact/glibc-tests/: README.md  glibc-2.38-phase-fair-boosting.patch  run_all.sh  setup.sh
artifact/glibc-tests/src/: compile.sh  mutex_test.cc  mutex_test_result.trace.trimmed.json  run.sh  rwlock_test.cc  rwlock_test_result.trace.trimmed.json
artifact/inference-tests/: CMakeLists.txt  README.md  setup.sh
artifact/inference-tests/models/: README.md  detr.onnx  generate_engine_plans.sh  segformer.onnx
artifact/inference-tests/src/: dummy_lib.cc  dummy_lib_compile.sh  infer.cu  infer_locking.cu  logger.h  model_launch_time.py  shim.cc  shim_compile.sh  util.cpp  util.h
artifact/inference-tests/src/data/: cityscape.ppm  goldfish.ppm
artifact/kutrace_min/: eventtospan3  kutrace_lib.cc  kutrace_mod.ko  makeself  rawtoevent  show_cpu.html  spantotrim
artifact/nvidia_drivers/: README.md
cuda_lock_stats/: README.md  compile.sh  cuda_lock_stats  cuda_lock_stats.cu  shim.cc
